--- a/2.html
+++ b/2.html
@@ -8,7 +8,7 @@ hello web
 <h1><a href="index.html">제목1</a></h1>
 <ol>
   <li><a href="1.html">리스트1</a></li>
-  <li><a href="2.html">리스트2</a></li>
+  <li><a href="2.html"><font color="red">리스트2</font></a></li>
 두번째째재재재재 페이징ㅋ~~~
   <li><a href="3.html">리스트3</a></li>
 
