--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@ hello web
 <br>210621 <strong>오션<u>월드</u></strong></br>
 <p>210621 미미셀프미용,<a href="https://atom.io/" target="_blank" title="아톰">커튼달기</a></p>
 
-
+<style>
+a {
+  color:black;
+  text-decoration: none;
+}
+</style>
 
 <h1><a href="index.html">제목1</a></h1> - WELCOME
 <ol>
